signupForm.css
:root{
    --image-width:33vw
}
*{
    box-sizing: border-box;
}
body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color:white;
}

.site-container{
    display: flex;
    height: 100%;
    box-sizing: border-box;
}
.image-container {
    position: relative;
    width: var(--image-width);
}

#desert-image{
    height:100%;
    width: var(--image-width);
    box-sizing: border-box;
}

.logo{
    position: absolute;
    top: 25%;
    width: var(--image-width);
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    background-color: rgb(27, 48, 21);
    opacity: 0.3;

}

/* font options for the logo header */
.logo > h2{
    font-family: cursive;
    font-size: 30px;
    padding: 10px 0;
}

.logo > img{
    height: 70%;
    padding: 10px 0;
}


.signUp{
    width: 67vw;
    box-sizing: border-box;
}
/* padding on every child of signUp class */
.signUp > *{
    padding: 10px 0 10px 0;
}

.head{
    height: 33vh;
    background-color:  rgb(48, 48, 46);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;

}

.head > *{
    width: 80%;
    font-size: calc(8px + 0.5vw);
}

.midsection{
    height: 34vh;
    background-color: rgb(104, 104, 64);
}

form{
    display: flex;
    flex-wrap: wrap ;
    height: 100%;
    justify-content: center;


}

form > *{
    display: flex;
    flex-direction: column;
    padding: 0 10px 0 10px;
    font-size: calc(8px + 0.5vw);

}

input{
    padding: 5px;
    border-radius: 5px;

}

input:valid{
    border-color: green;
}


input:invalid:focus{
    border-color: red;
}



.footer{
    height: 33vh;
    background-color:  rgb(48, 48, 46);
}

.footer > .button-container{
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-right: 10%;
}
.button-container > p{
    padding-left: 20px;
}

.message{
    font-size: 10px;
    font-family: Arial, Helvetica, sans-serif;
}

